tests/baselines/reference/decoratorOnClassMethod3.errors.txt
tests/cases/conformance/decorators/class/method/decoratorOnClassMethod3.ts(4,12): error TS1436: Decorators must precede the name and all keywords of property declarations.


==== tests/cases/conformance/decorators/class/method/decoratorOnClassMethod3.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        public @dec method() {}
               ~
!!! error TS1436: Decorators must precede the name and all keywords of property declarations.
    }